2A/05_Projet_GL/src/test/deca/context/invalid/complet/24_field_int_init_bool.deca
// Description :
//    Assign invalide dans decl field : boolean --> int 
// Resultats :
//    ligne 10 : le boolean ne peut pas être affecté à int
// Historique :
//  cree le 16/01/2024

class A {
    int a = true ; 
}